SONARJAVA-4465 Update java-check-test-sources to build with Java 20