@@ -347,7 +347,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.20</version>
+      <version>1.18.26</version>
       <type>jar</type>
       <scope>provided</scope>
     </dependency>
@@ -902,9 +902,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>17</release>
-          <source>17</source>
-          <target>17</target>
+		  <argLine>--enable-preview</argLine>
+          <release>19</release>
+          <source>19</source>
+          <target>19</target>
         </configuration>
       </plugin>
       <plugin>
